<resources>
    <string name="app_name">NCS Recognition Manager</string>
    <string name="enter_email">ENTER EMAIL</string>
    <string name="changes_are_being_made_wait">Changes Are Being Made, Wait</string>
    <string name="logout_successful">LOGOUT SUCCESSFULLY</string>
    <string name="login_successful">LOGIN SUCCESSFULLY</string>
    <string name="sing_up_successful">SIGNUP SUCCESSFULLY</string>
    <string name="enter_login_and_password">ENTER LOGIN AND PASSWORD</string>
    <string name="going_to_manager_activity">GOING TO USER SAFE ACTIVITY</string>
    <string name="error_enter_your_name">ERROR, ENTER YOUR NAME</string>
    <string name="sing_up">SING UP</string>
    <string name="reset_password">Reset password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="ncs_face_descriptor">NCS Face Descriptor</string>
    <string name="select_point_to_view_data">Select point to view data</string>
    <string name="delete_point">Delete Point</string>
    <string name="system_id">system_id</string>
    <string name="chosen_system">Chosen System:</string>
    <string name="available_recognition_system_s">Available Recognition System\'s:</string>
    <string name="manager_id">manager_id</string>
    <string name="welecome_back">Welecome back:</string>
    <string name="logout">Logout</string>
    <string name="recognition_system_removed">Some Recognition System Removed, Please Select Available System</string>

</resources>